# src/api/models/index.ts
@@ -1,18 +1,19 @@
-/* tslint:disable */
-/* eslint-disable */
-export * from './CreateJourneyDefinitionRequest';
-export * from './CreateJourneyInstanceRequest';
-export * from './ErrorResponse';
-export * from './ErrorResponseError';
-export * from './EventInfo';
-export * from './EventRequest';
-export * from './JourneyDefinitionResponse';
-export * from './JourneyInstanceResponse';
-export * from './JourneyStatus';
-export * from './PaginationInfo';
-export * from './State';
-export * from './StateType';
-export * from './TransitionHistoryEventResponse';
-export * from './TransitionHistoryListResponse';
-export * from './TransitionRequest';
-export * from './TransitionResponse';
+export * from './create-journey-definition-request';
+export * from './create-journey-instance-request';
+export * from './error-response';
+export * from './error-response-error';
+export * from './event-info';
+export * from './event-request';
+export * from './journey-definition-response';
+export * from './journey-definition-status';
+export * from './journey-instance-response';
+export * from './journey-status';
+export * from './pagination-info';
+export * from './state';
+export * from './state-position';
+export * from './state-type';
+export * from './transition-history-event-response';
+export * from './transition-history-list-response';
+export * from './transition-request';
+export * from './transition-response';
+export * from './update-status-request';
