# src/api/models/journey-definition-status.ts
@@ -1,0 +1,27 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Journey Orchestrator API
+ * Platform service responsible for executing configurable journeys using a state machine model. The service is business-agnostic and manages journey definitions and journey instances driven by events. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+
+export const JourneyDefinitionStatus = {
+    Ativa: 'ATIVA',
+    Inativa: 'INATIVA',
+    Rascunho: 'RASCUNHO',
+} as const;
+
+export type JourneyDefinitionStatus = typeof JourneyDefinitionStatus[keyof typeof JourneyDefinitionStatus];
+
+
+
