# src/api/models/update-status-request.ts
@@ -1,0 +1,25 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Journey Orchestrator API
+ * Platform service responsible for executing configurable journeys using a state machine model. The service is business-agnostic and manages journey definitions and journey instances driven by events. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { JourneyDefinitionStatus } from './journey-definition-status';
+
+export interface UpdateStatusRequest {
+    'status': JourneyDefinitionStatus;
+}
+
+
+
